reorganised file structure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,11 @@ jobs:
       - name: Build project
         run: npx vite build
 
+      - name: Prepare src folder
+        run : mkdir dist/src
+
       - name: Copy assets
-        run : cp src dist/src -r
+        run : cp src/img dist/src/img -r
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
