--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: npx vite build
 
       - name: Copy assets
-        run : cp assets dist/assets -r
+        run : cp assets dist -r
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
